--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support.constraint:constraint-layout:1.1.2'
     compile "com.android.support:design:$androidSupportVersion"
     compile "com.android.support:support-v4:$androidSupportVersion"
     compile "com.android.support:support-v13:$androidSupportVersion"
